--- a/Directive-Demo/src/app/app.component.html
+++ b/Directive-Demo/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!-- <app-ng-if-direvtive></app-ng-if-direvtive> -->
 <!-- <app-ng-swicth-direvtive></app-ng-swicth-direvtive> -->
-<app-ng-for-direvtive></app-ng-for-direvtive>
+<!-- <app-ng-for-direvtive></app-ng-for-direvtive> -->
+
+<!-- <app-ng-style-direvtive></app-ng-style-direvtive> -->
+<app-ng-class-direvtive></app-ng-class-direvtive>
