--- a/Directive-Demo/src/app/app.component.html
+++ b/Directive-Demo/src/app/app.component.html
@@ -3,4 +3,8 @@
 <!-- <app-ng-for-direvtive></app-ng-for-direvtive> -->
 
 <!-- <app-ng-style-direvtive></app-ng-style-direvtive> -->
-<app-ng-class-direvtive></app-ng-class-direvtive>
+<!-- <app-ng-class-direvtive></app-ng-class-direvtive> -->
+
+<!-- <app-custome-directive-componet></app-custome-directive-componet> -->
+
+<app-host-listner></app-host-listner>
